Fix dark mode bug, start working on dark provider

--- a/src/css/tokens.sass
+++ b/src/css/tokens.sass
@@ -60,7 +60,7 @@ $realistic-shadow:       var(--realistic-shadow)
     --text-200-color:         #{hsl(210,  50%,  37.5%) /* +12.5% */}
     --text-300-color:         #{hsl(210,  50%,  50%)   /* +12.5% */}
     --text-400-color:         #{hsl(210,  50%,  62.5%) /* +12.5% */}
-    --text-400-color:         #{$text-100-color}
+    --text-400-color:         #{hsl(210,  50%,  62.5%) /* +12.5% */}
 
   :root[data-theme=dark]
     --brand-color:            #{dodgerblue}
